change user profile pic

--- a/clickthru/MyAccount_MyProfile.html
+++ b/clickthru/MyAccount_MyProfile.html
@@ -292,10 +292,10 @@
 
                             <div class="media" style="padding-top: 20px">
                                 <a class="pull-left" href="#">
-                                <img class="img-thumbnail" src="media/zuckerburg.jpg" alt="...">
+                                <img class="img-thumbnail" width="300px" height="300px" src="media/web-user.jpg" alt="...">
                                 </a>
                                 <div class="media-body">
-                                    <h1>Mark Zuckerburg</h1>
+                                    <h1>Chenyu</h1>
                                     <h4><strong>DOB</strong> 04/03/1988</h4>
                                     <h4><strong>Phone</strong> 324-245-1244 <span class="glyphicon glyphicon-phone"></span> 324-245-1244 <span class="glyphicon glyphicon-phone-alt"></span></h4>
                                     <h4><strong>E-mail</strong> <a href="mailto:#">mark.zuckerburg@assetorg.com</a></h4>
