--- a/clickthru/online_service_cart.html
+++ b/clickthru/online_service_cart.html
@@ -287,8 +287,8 @@
 					<table>
 						<thead><tr><td>PD Offering</td><td>Availability</td><td>Quantity</td><td>Price</td></tr></thead>
 						<tr><td style="width:40%">Fabric</td><td>3</td><td><input type="number" style="width:50px"></td><td>$323.00</td><td><a href="">delete</a></td></tr>
-						<tr><td>Fabric</td><td>3</td><td><input type="number" style="width:50px"></td><td>$323.00</td><td><a href="">delete</a></td></tr>
-						<tr><td>Fabric</td><td>3</td><td><input type="number" style="width:50px"></td><td>$323.00</td><td><a href="">delete</a></td></tr>
+						<tr><td>Land & Water</td><td>3</td><td><input type="number" style="width:50px"></td><td>$323.00</td><td><a href="">delete</a></td></tr>
+						<tr><td>Ecosystems</td><td>3</td><td><input type="number" style="width:50px"></td><td>$323.00</td><td><a href="">delete</a></td></tr>
 					</table>
 					<div style="margin: 20px;" class="divider"></div>
 					<div style="float:left"><h4>Total: $999.00</h4></div>
