--- a/clickthru/index.html
+++ b/clickthru/index.html
@@ -88,7 +88,7 @@
 						</div>
 						<div class="modal-body">
 							<form class="form-signin">
-								<input type="text" class="form-control" placeholder="Email address" autofocus="">
+								<input type="text" class="form-control" placeholder="Email address" autofocus=""><br/>
 									<input type="password" class="form-control" placeholder="Password">
 										<label class="checkbox">
 											<input type="checkbox" value="remember-me"> Remember me
