--- a/clickthru/PD_Details_Page.html
+++ b/clickthru/PD_Details_Page.html
@@ -482,11 +482,11 @@
                                                                 </div>
                                                                 <div class="col-md-6">
                                                                     <ul class="list-group" style="margin-top: 30px;">
-                                                                        <li class="list-group-item"> 
+                                                                        <li  style="height: 55px;" class="list-group-item"> 
                                                                             <div class="form-group">                                                                            
-                                                                                <p class="col-md-4 col-md-offset-2">Add Seats</p>
-                                                                                <div class="col-md-1 col-md-offset-1">                                                                                
-                                                                                    <input type="text" style=" height: 20px;" class="form-control" id="addSeats"  placeholder="1">
+                                                                                <p class="col-md-4">Add Seats</p>
+                                                                                <div class="col-md-4">                                                                                
+                                                                                    <input type="text" class="form-control" id="addSeats"  placeholder="1">
                                                                                 </div>                                                                                                                                           
                                                                         </li>
                                                                         <li class="list-group-item"> 
